sofvalidator