@@ -3,14 +3,19 @@ package org.akash;
 import javax.smartcardio.*;
 import java.util.List;
 import java.util.function.Consumer;
+import java.util.logging.*;
 
 public class CardReader implements Runnable {
+
+
+    private static final Logger logger = Logger.getLogger(CardReader.class.getName());
 
     private final Consumer<String> onUidRead;
 
     public CardReader(Consumer<String> onUidRead) {
         this.onUidRead = onUidRead;
     }
+
 
     @Override
     public void run() {
@@ -23,46 +28,64 @@ public class CardReader implements Runnable {
                 return;
             }
 
-            CardTerminal terminal = terminals.get(0);
-            System.out.println("Reader detected: " + terminal.getName());
+            CardTerminal terminal = terminals.getFirst();
+            logger.log(Level.INFO, "Reader detected: {0}", terminal.getName());
 
-            while (true) {
+            while (!Thread.currentThread().isInterrupted()) {
                 terminal.waitForCardPresent(0);
-                System.out.println("Card detected");
+//                logger.info("Card detected");
 
-                Card card = null;
                 try {
-                    card = terminal.connect("*");
-                    CardChannel channel = card.getBasicChannel();
-
-                    CommandAPDU getUid = new CommandAPDU(
-                            new byte[]{(byte) 0xFF, (byte) 0xCA, 0x00, 0x00, 0x00}
-                    );
-
-                    ResponseAPDU response = channel.transmit(getUid);
-
-                    if (response.getSW() == 0x9000) {
-                        String uid = bytesToHex(response.getData());
-                        onUidRead.accept(uid);
-                    } else {
-                        onUidRead.accept("READ_FAILED");
-                    }
-
-                } catch (Exception e) {
-                    onUidRead.accept("ERROR");
-                    e.printStackTrace();
-                } finally {
-                    if (card != null) {
-                        card.disconnect(false);
-                    }
+                    readCardUID(terminal);
+                } catch (CardException e) {
+                    // Already logged in readCardUID
                 }
 
                 terminal.waitForCardAbsent(0);
+//                logger.info("Card removed");
             }
 
         } catch (Exception e) {
             onUidRead.accept("INIT_ERROR");
-            e.printStackTrace();
+            logger.log(Level.SEVERE, "Error initializing card reader", e);
+        }
+    }
+
+    private void readCardUID(CardTerminal terminal) throws CardException {
+        Card card = null;
+        try {
+            card = terminal.connect("*");
+            CardChannel channel = card.getBasicChannel();
+
+            CommandAPDU getUid = new CommandAPDU(
+                    new byte[]{(byte) 0xFF, (byte) 0xCA, 0x00, 0x00, 0x00}
+            );
+
+            ResponseAPDU response = channel.transmit(getUid);
+
+            if (response.getSW() == 0x9000) {
+                String uid = bytesToHex(response.getData());
+                onUidRead.accept(uid);
+//                logger.log(Level.INFO, "Card UID: {0}", uid);
+            } else {
+                onUidRead.accept("READ_FAILED");
+                logger.warning("Failed to read card UID. SW=" + Integer.toHexString(response.getSW()));
+            }
+
+        } catch (CardException e) {
+            logger.log(
+                    Level.WARNING,
+                    "Card communication error on terminal: {0}",
+                    terminal.getName()
+            );
+        } finally {
+            if (card != null) {
+                try {
+                    card.disconnect(false);
+                } catch (CardException ex) {
+                    logger.log(Level.WARNING, "Error disconnecting card", ex);
+                }
+            }
         }
     }
 
